--- a/css/main.css
+++ b/css/main.css
@@ -26,3 +26,20 @@ body{
 .hide {
     display: none;
 }
+
+.fileUpload {
+    position: relative;
+    overflow: hidden;
+}
+.fileUpload input {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+    opacity: 0;
+}
+.progress {
+    margin-bottom: 0;
+}
